# Teknofest-Sancak-Hava-Savunma-Sistemi

./: .clang-format  .clang-tidy  .gitignore  AI_PROMPT.md  CMakeLists.txt  CMakePresets.json  arduino.cpp
.github/workflows/: ci.yml
PC/: .clang-format  BUILD.md  CMakeLists.txt  README.md
PC/include/: App.hpp  ArduinoController.hpp  CsvLogger.hpp  NetworkProtocol.hpp  TelemetryClient.hpp  TextureHelper.hpp  VideoReceiver.hpp
PC/include/protocol/: ProtocolDef.h
PC/src/: App.cpp  ArduinoController.cpp  CsvLogger.cpp  TelemetryClient.cpp  TextureHelper.cpp  VideoReceiver.cpp  main.cpp
_extra/: TEKNIK_DOKUMAN.md  export_for_ai_plain.ps1  imgui.ini  ozet.md  sohbet_gecmisi.md
_extra/rapor belgeleri/: ÖTR.docx  ÖTR.odt
_extra/teknik_dokuman/: akis.md  algoritmalar.md  build.md  checklist.md  komutlar.md  konfigurasyon.md  test_senaryolari.md
arduino/Receiver/: ARDUINO_GELISTIRICI_NOTLARI.md  ProtocolDef.h  Receiver.ino
protocol/: ProtocolDef.h
raspi/: CMakeLists.txt  DOCKER_README.md  Dockerfile  README.md  hardware_input.py  requirements.txt
raspi/config/: sancak_config.yml
raspi/docs/: README_BALON_TESPIT_PYTHON.md  README_HEADLESS.md  README_MODULAR.md  raspi.txt  raspi_pinleri.txt
raspi/include/: balloon_detector.hpp  color_filter.hpp  common_defs.hpp  detect_balloons.hpp  logger.hpp  motion_detector.hpp  shape_analyzer.hpp  tracking_pipeline.hpp  turret_controller.hpp  vision_system.hpp
raspi/include/core/: combat_state_machine.hpp  types.hpp
raspi/include/network/: protocol.hpp  tcp_telemetry_server.hpp  telemetry_sender.hpp  udp_video_streamer.hpp
raspi/include/protocol/: PacketBuilder.hpp
raspi/include/sancak/: aim_solver.hpp  ballistics_manager.hpp  balloon_segmentor.hpp  camera_controller.hpp  combat_pipeline.hpp  config_manager.hpp  distance_estimator.hpp  inference_worker.hpp  lidar_sensor.hpp  logger.hpp  mock_lidar.hpp  serial_comm.hpp  target_tracker.hpp  trigger_controller.hpp  types.hpp  yolo_detector.hpp
raspi/src/: balloon_detector.cpp  balloon_detector_runner.cpp  color_filter.cpp  detect_balloons.cpp  logger.cpp  main_detector.cpp  motion_detector.cpp  shape_analyzer.cpp  tracking_pipeline.cpp  turret_controller.cpp  vision_system.cpp
raspi/src/network/: tcp_telemetry_server.cpp  telemetry_sender.cpp  udp_video_streamer.cpp
raspi/src/protocol/: PacketBuilder.cpp  Sender.cpp
raspi/src/sancak/: aim_solver.cpp  ballistics_manager.cpp  balloon_segmentor.cpp  camera_controller.cpp  combat_pipeline.cpp  config_manager.cpp  distance_estimator.cpp  inference_worker.cpp  main.cpp  mock_lidar.cpp  serial_comm.cpp  target_tracker.cpp  trigger_controller.cpp  yolo_detector.cpp
raspi/tests/: pc_webcam_test.cpp  test_ballistics_manager.cpp  test_balloon_detector.cpp  test_balloon_segmentor.cpp  test_color_filter.cpp  test_distance_estimator.cpp  test_motion_detector.cpp  test_network_commands.cpp  test_shape_analyzer.cpp  test_target_tracker.cpp  test_tracking_pipeline.cpp  test_trigger_controller.cpp  test_video_integration.cpp
teknik_dokuman/: combat_pipeline.md  dosya_yapisi.md  mulakat_sorulari.md  protokoller.md  topoloji.md
